User mapper, service, repository - refactoring